--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "json2xls": "^0.1.2",
     "method-override": "^3.0.0",
-    "mongodb": "^3.6.6"
+    "mongodb": "^3.6.6",
+    "table-sort-js": "^1.2.7"
   }
 }
